--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
       - key: APP_DEBUG
         value: true
       - key: APP_URL
-        value: https://eneo-fleet-services.onrender.com
+        value: https://fleet-services.onrender.com
       - key: APP_KEY
         sync: base64:eoGKNzIeQHi0DXAnoukrTR7tFTQfnylc/zSKdmWUaiY=
       - key: DB_CONNECTION
