--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+# DB_HOST=mysql-3d31e0b0-komguepnelly55-6ad2.l.aivencloud.com
+# DB_PORT=14467
+# DB_DATABASE=defaultdb
+# DB_USERNAME=avnadmin
+# DB_PASSWORD=AVNS_FTP4iHycWkpn1Hdh9Ev
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
