--- a/render.yaml
+++ b/render.yaml
@@ -26,4 +26,9 @@ services:
         value: root
       - key: DB_PASSWORD
         sync: bKBpOOpgFfaYcXlSQehZlkqaGOOVBYKy
+    postDeployCommand: |
+      php artisan config:clear &&
+      php artisan cache:clear &&
+      php artisan route:clear &&
+      php artisan view:clear
 
