--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
       - key: APP_ENV
         value: production
       - key: APP_DEBUG
-        value: true
+        value: false
       - key: APP_URL
         value: https://fleet-services.onrender.com
       - key: APP_KEY
@@ -17,15 +17,15 @@ services:
       - key: DB_CONNECTION
         value: mysql
       - key: DB_HOST
-        value: ${{RAILWAY_PRIVATE_DOMAIN}}
+        value: mysql-3d31e0b0-komguepnelly55-6ad2.l.aivencloud.com
       - key: DB_PORT
-        value: 3306
+        value: 14467
       - key: DB_DATABASE
-        value: eneo_fleet_services
+        value: defaultdb
       - key: DB_USERNAME
-        value: root
+        value: avnadmin
       - key: DB_PASSWORD
-        sync: bKBpOOpgFfaYcXlSQehZlkqaGOOVBYKy
+        sync: AVNS_FTP4iHycWkpn1Hdh9Ev
     postDeployCommand: |
       php artisan config:clear &&
       php artisan cache:clear &&
